# chatgptcodex

./: .gitignore  README.md  pyproject.toml
src/password_vault/: __init__.py  cli.py  crypto.py  vault.py
tests/: test_vault.py
