[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "password-vault"
version = "0.1.0"
description = "MVP of a modern password storage CLI"
authors = [{name = "ChatGPT"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41,<43",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
password-vault = "password_vault.cli:main"
